--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="containedButton">Contained Button</string>
     <string name="containedButtonIcon">Contained Button Icon</string>
     <string name="yourSelected">Ваш выбор: %1$d</string>
-
+    <string name="yourSelectedRange">Ваш выбор: от %1$d до %2$d</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
