--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,14 @@
     <string name="slider">Slider</string>
     <string name="range_slider">Range Slider </string>
     <string name="outlinedButton">Material Check Box</string>
-    <string name="outlinedButtonIcon">Out Lined Button Icon</string>
+    <string name="outlinedButtonIcon">Toggle Material Button</string>
     <string name="containedButton">Contained Button</string>
     <string name="containedButtonIcon">Contained Button Icon</string>
     <string name="yourSelected">Ваш выбор: %1$d</string>
     <string name="yourSelectedRange">Ваш выбор: от %1$d до %2$d</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="item1">Item 1</string>
+    <string name="item2">Item 2</string>
+    <string name="item3">Item 3</string>
+    <string name="item4">Item 4</string>
 </resources>
