--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,23 @@
     <string name="range_slider">Range Slider </string>
     <string name="outlinedButton">Material Check Box</string>
     <string name="outlinedButtonIcon">Toggle Material Button</string>
-    <string name="containedButton">Contained Button</string>
-    <string name="containedBtnIcon">Contained Btn Icon</string>
+    <string name="containedButton">Dialog</string>
+    <string name="containedBtnIcon">Multi Dialog</string>
     <string name="yourSelected">Ваш выбор: %1$d</string>
+    <string name="yourSelectedPart">Ваш выбор:</string>
     <string name="yourSelectedRange">Ваш выбор: от %1$d до %2$d</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="item1">Item 1</string>
     <string name="item2">Item 2</string>
     <string name="item3">Item 3</string>
     <string name="item4">Item 4</string>
+    <string name="close">Close</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="actionPositive">Positive</string>
+    <string name="actionNeutral">Neutral</string>
+    <string name="actionNegative">Negative</string>
+    <string name="onePart">onePart</string>
+    <string name="threePart">threePart</string>
+    <string name="twoPart">twoPart</string>
 </resources>
